fix z-index

--- a/src/scss/components/_content.scss
+++ b/src/scss/components/_content.scss
@@ -7,7 +7,7 @@
 	overflow: hidden;
 
 	@include media('<=tabletHorizontal') {
-		min-height: 460px;
+		min-height: 400px;
 	}
 
 	&__dust {
@@ -141,6 +141,7 @@
 			bottom: 0;
 			right: -35px;
 			width: 249px;
+			z-index: 1;
 		}
 	}
 }
@@ -160,11 +161,11 @@
 		bottom: 0;
 		left: 0;
 		width: 250px;
-		z-index: 1;
 	}
 
   &__bg {
     position: relative;
+		z-index: 3;
   }
 
 	&__spinner {
@@ -174,6 +175,7 @@
 		left: 50%;
 		top: 8.5%;
 		transform: translate(-50%, 0%);
+		z-index: 6;
 	}
 
 	&__button {
@@ -191,6 +193,6 @@
 		left: 50%;
 		transform: translate(-50%, -50%);
 		cursor: pointer;
-    z-index: 5;
+    z-index: 10;
 	}
 }
