--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -19,7 +19,7 @@
 		position: absolute;
 		left: 0;
 		bottom: 0;
-		z-index: 1;
+		z-index: 4;
 
 		@include media('<=1300px') {
 			bottom: 100%;
